--- a/Task2/package.json
+++ b/Task2/package.json
@@ -7,14 +7,24 @@
     "postinstall": "npm start"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-handlebars": "^4.0.3",
+    "express-session": "^1.17.1",
+    "express-validator": "5.3.1",
     "hbs": "^4.1.0",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.0",
+    "mongoose": "^5.9.11",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-local": "latest",
+    "passport-local-mongoose": "^6.0.1"
   }
 }
