--- a/Task2/package.json
+++ b/Task2/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-local": "latest",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "socket.io": "^2.3.0"
   }
 }
